fix(community): align redis consistency and log lifecycle